# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
includes/: minishell.h
libft/: .gitignore  CMakeLists.txt  Makefile
libft/includes/: get_next_line.h  libft.h
libft/srcs/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_hexstr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_lsttoarr.c  ft_max.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_split.c  ft_split_str.c  ft_strchr.c  ft_strcmp.c  (+15 more)
srcs/: error.c  execute.c  ft_echo.c  main.c  parse.c
srcs/logic/: cmd_cd.c  cmd_echo.c  cmd_env.c  cmd_exit.c  cmd_export.c  cmd_other.c  cmd_pwd.c  cmd_unset.c  execute.c  ft_cd.c  ft_echo.c  ft_export.c  ft_other.c  ft_pwd.c  get_env.c  get_fd.c  history.c  logic_clean.c  logic_errors.c  logic_utils.c  redirect.c  signal_handlers.c  termcap.c
srcs/parse/: dollar.c  escape.c  get_cd.c  get_echo.c  get_exit.c  get_export.c  get_other.c  get_pwd_env.c  get_redirection.c  get_unset.c  parse.c  parse_loop.c  parse_utils.c  preparse.c  quote.c  quote_utils.c  utils.c
tests/: CMakeLists.txt  parse_test_1.c  parse_test_2.c
